hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/invalid_call2.php.exp
File "invalid_call2.php", line 15, characters 5-15:
Only classnames and variables are allowed before `::`. (Parsing[1002])
File "invalid_call2.php", line 15, characters 5-22:
Expression trees only support function calls and static method calls on named classes. (Parsing[1002])
